--- a/services.html
+++ b/services.html
@@ -301,7 +301,7 @@
 
 
 
-                <div id="Premium" class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-2xl p-6 shadow-2xl border border-yellow-500/30 transform lg:-translate-y-4 relative overflow-hidden group" data-aos="fade-up" data-aos-delay="100">
+                <div id="Premium" class="bg-gradient-to-br from-gray-900 to-gray-800 rounded-2xl p-6 shadow-2xl scroll-mt-20 border border-yellow-500/30 transform lg:-translate-y-4 relative overflow-hidden group" data-aos="fade-up" data-aos-delay="100" >
                     <div class="absolute top-0 right-0 bg-yellow-400 text-black text-[10px] font-bold px-3 py-1 rounded-bl-lg uppercase">Recommended</div>
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-gradient-to-br from-yellow-400 to-orange-500 rounded-full flex items-center justify-center text-white text-2xl shadow-lg">
@@ -320,7 +320,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Premium%20Chart%20Analysis" class="block text-center w-full py-3 rounded-xl bg-gradient-to-r from-yellow-400 to-orange-500 text-white font-bold hover:shadow-lg transition">Get Priority Slot</a>
                 </div>
 
-                <div id="Get" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-red-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
+                <div id="Get" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl scroll-mt-20  hover:border-red-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-red-50 rounded-full flex items-center justify-center text-red-600 text-2xl group-hover:bg-red-600 group-hover:text-white transition">
                             <i class="fas fa-heart-broken"></i>
@@ -338,7 +338,7 @@
                     <a href="https://wa.me/917905287701?text=I%20need%20help%20with%20Love%20Problem" class="block text-center w-full py-3 rounded-xl border border-red-200 text-red-600 font-bold hover:bg-red-600 hover:text-white transition">Consult Now</a>
                 </div>
 
-                <div id="Tarot" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-purple-300 transition-all duration-300 group" data-aos="fade-up">
+                <div id="Tarot" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl scroll-mt-20  hover:border-purple-300 transition-all duration-300 group" data-aos="fade-up">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-purple-50 rounded-full flex items-center justify-center text-purple-600 text-2xl group-hover:bg-purple-600 group-hover:text-white transition">
                             <i class="fas fa-layer-group"></i>
@@ -352,7 +352,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Tarot%20Reading" class="block text-center w-full py-3 rounded-xl border border-purple-200 text-purple-600 font-bold hover:bg-purple-600 hover:text-white transition">Ask a Question</a>
                 </div>
 
-                <div id="Palm" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-yellow-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="100">
+                <div id="Palm" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl scroll-mt-20  hover:border-yellow-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="100">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-yellow-50 rounded-full flex items-center justify-center text-yellow-600 text-2xl group-hover:bg-yellow-600 group-hover:text-white transition">
                             <i class="fas fa-hand-paper"></i>
@@ -366,7 +366,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Palm%20Analysis" class="block text-center w-full py-3 rounded-xl border border-yellow-200 text-yellow-600 font-bold hover:bg-yellow-600 hover:text-white transition">Send Hand Photo</a>
                 </div>
 
-                <div id="Face" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-green-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
+                <div id="Face" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl scroll-mt-20  hover:border-green-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-green-50 rounded-full flex items-center justify-center text-green-600 text-2xl group-hover:bg-green-600 group-hover:text-white transition">
                             <i class="fas fa-eye"></i>
@@ -380,7 +380,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Face%20Reading" class="block text-center w-full py-3 rounded-xl border border-green-200 text-green-600 font-bold hover:bg-green-600 hover:text-white transition">Book Reading</a>
                 </div>
 
-                <div id="Numerology" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-indigo-300 transition-all duration-300 group" data-aos="fade-up">
+                <div id="Numerology" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl scroll-mt-20  hover:border-indigo-300 transition-all duration-300 group" data-aos="fade-up">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-indigo-50 rounded-full flex items-center justify-center text-indigo-600 text-2xl group-hover:bg-indigo-600 group-hover:text-white transition">
                             <i class="fas fa-hashtag"></i>
@@ -394,7 +394,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Numerology%20Report" class="block text-center w-full py-3 rounded-xl border border-indigo-200 text-indigo-600 font-bold hover:bg-indigo-600 hover:text-white transition">Get Report</a>
                 </div>
 
-                <div id="Matchmaking" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-pink-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="100">
+                <div id="Matchmaking" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl scroll-mt-20  hover:border-pink-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="100">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-pink-50 rounded-full flex items-center justify-center text-pink-600 text-2xl group-hover:bg-pink-600 group-hover:text-white transition">
                             <i class="fas fa-user-friends"></i>
@@ -408,7 +408,7 @@
                     <a href="https://wa.me/917905287701?text=I%20want%20Matchmaking" class="block text-center w-full py-3 rounded-xl border border-pink-200 text-pink-600 font-bold hover:bg-pink-600 hover:text-white transition">Check Match</a>
                 </div>
 
-                <div id="Quick" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl hover:border-blue-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
+                <div id="Quick" class="bg-white rounded-2xl p-6 shadow-lg border border-orange-100 hover:shadow-2xl scroll-mt-20  hover:border-blue-300 transition-all duration-300 group" data-aos="fade-up" data-aos-delay="200">
                     <div class="flex justify-between items-start mb-4">
                         <div class="w-14 h-14 bg-blue-50 rounded-full flex items-center justify-center text-blue-600 text-2xl group-hover:bg-blue-600 group-hover:text-white transition">
                             <i class="fas fa-bolt"></i>
